--- a/ToDoApp/Views/ToDoList/_ToDoTable.cshtml
+++ b/ToDoApp/Views/ToDoList/_ToDoTable.cshtml
@@ -1,32 +1,36 @@
 ﻿@model IEnumerable<ToDoApp.Models.ToDoItem>
 
+<div id="progressBarToDo">
+    <div class="progress">
+        <div class="progress-bar" role="progressbar"
+             style="width:@ViewBag.Percent%;">@ViewBag.Percent%</div>
+    </div>
+</div>
 
 <table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Description)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.IsDone)
-        </th>
-        <th></th>
-    </tr>
-
     @foreach (var item in Model)
     {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.Description)
+                @if (!item.IsDone)
+                {
+                    @Html.DisplayFor(modelItem => item.Description)
+                }
+                else
+                {
+                    <div class="completedToDoItem">@Html.DisplayFor(modelItem => item.Description)</div>
+                }
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.IsDone)
+                @Html.CheckBoxFor(modelItem => item.IsDone, new { id = item.Id, @class ="activeCheck" })
             </td>
             <td>
                 @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
-                @Html.ActionLink("Details", "Details", new { id = item.Id }) |
                 @Html.ActionLink("Delete", "Delete", new { id = item.Id })
             </td>
         </tr>
     }
 
 </table>
+
+<script src="~/Scripts/addCheckBoxListener.js"></script>
