made changes to views

--- a/ToDoApp/Views/Home/About.cshtml
+++ b/ToDoApp/Views/Home/About.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
     ViewBag.Title = "About";
 }
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
-
-<p>Use this area to provide additional information.</p>
+<h2>ToDo Application</h2>
+<hr>
+<p>An ASP.NET MVC application that allows you to add, track, and remove your tasks. 
+    Uses individual authentication, entity framework, jQuery, Ajax.  </p>
