--- a/ToDoApp/Views/ToDoList/Index.cshtml
+++ b/ToDoApp/Views/ToDoList/Index.cshtml
@@ -16,17 +16,16 @@
         UpdateTargetId = "tableDiv"
     }))
     {
-        <div class="form-group">
+        <div>
             @Html.AntiForgeryToken()
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Description, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Description, "", new { @class = "text-danger" })
+            <div>
+                @Html.Editor("Description")
                 <input type="submit" value="Add" class="btn btn-default" />
             </div>
         </div>
+
     }
 </div>
-
 
 @section Scripts {
     <script src="~/Scripts/jquery.unobtrusive-ajax.min.js"></script>
