--- a/ToDoApp/Views/Shared/_Layout.cshtml
+++ b/ToDoApp/Views/Shared/_Layout.cshtml
@@ -14,7 +14,7 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("My ToDo List", "Index", "ToDoList")</li>
+                    <li>@Html.ActionLink("To-Do List", "Index", "ToDoList")</li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
