changess to views

--- a/ToDoApp/Views/Home/About.cshtml
+++ b/ToDoApp/Views/Home/About.cshtml
@@ -1,7 +1,9 @@
 ﻿@{
     ViewBag.Title = "About";
 }
-<h2>ToDo Application</h2>
+<h2>Todo Application</h2>
 <hr>
-<p>An ASP.NET MVC application that allows you to add, track, and remove your tasks. 
-    Uses individual authentication, entity framework, jQuery, Ajax.  </p>
+<p>
+    An ASP.NET MVC application that allows you to add, track, and remove your tasks.
+    It is uses Entity framework, jQuery, Ajax, individual authentication.
+</p>
