--- a/ToDoApp/Views/Manage/ChangePassword.cshtml
+++ b/ToDoApp/Views/Manage/ChangePassword.cshtml
@@ -1,9 +1,13 @@
 ﻿@model ToDoApp.Models.ChangePasswordViewModel
 
+@{
+    ViewBag.Title = "Change password";
+}
+
 @using (Html.BeginForm("ChangePassword", "Manage", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
 {
     @Html.AntiForgeryToken()
-    
+
     <hr />
     @Html.ValidationSummary("", new { @class = "text-danger" })
     <div class="form-group">
