--- a/ToDoApp/Views/Manage/Index.cshtml
+++ b/ToDoApp/Views/Manage/Index.cshtml
@@ -1,5 +1,9 @@
 ﻿@model ToDoApp.Models.IndexViewModel
 
+@{
+    ViewBag.Title = "Account settings";
+}
+
 <p class="text-success">@ViewBag.StatusMessage</p>
 <div>
     <h2>Your account settings</h2>
