--- a/ToDoApp/Views/Home/Index.cshtml
+++ b/ToDoApp/Views/Home/Index.cshtml
@@ -1,10 +1,10 @@
 ﻿@{
-    ViewBag.Title = "Home Page";
+    ViewBag.Title = "Home";
 }
 
 <div class="jumbotron">
-    <h1>ToDo Application</h1>
-    <p class="lead">Life can feel overwhelming, but it doesn’t have to. ToDo keeps track of everything  – 
+    <h1>Todo App</h1>
+    <p class="lead">Life can feel overwhelming, but it doesn’t have to. This Todo App keeps track of everything  – 
         so you can get it all done and enjoy more peace of mind along the way.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Get started</a></p>
+    <p><a href="@Url.Action("Register", "Account")" class="btn btn-primary btn-lg">Get started</a></p>
 </div>
