--- a/ToDoApp/Views/ToDoList/Delete.cshtml
+++ b/ToDoApp/Views/ToDoList/Delete.cshtml
@@ -1,6 +1,11 @@
 ﻿@model ToDoApp.Models.ToDoItem
 
+@{
+    ViewBag.Title = "Delete";
+}
+
 <h3>Are you sure you want to delete this?</h3>
+
 <div>
     <hr />
     <dl class="dl-horizontal">
