--- a/ToDoApp/Views/ToDoList/Edit.cshtml
+++ b/ToDoApp/Views/ToDoList/Edit.cshtml
@@ -1,6 +1,10 @@
 ﻿@model ToDoApp.Models.ToDoItem
 
+@{
+    ViewBag.Title = "Edit";
+}
 
+<h2>Edit</h2>
 
 @using (Html.BeginForm())
 {
@@ -14,7 +18,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Description, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Description, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.Description, new { htmlAttributes = new { @class = "form-control", maxlength = "5" }})
                 @Html.ValidationMessageFor(model => model.Description, "", new { @class = "text-danger" })
             </div>
         </div>
